[gd_scene load_steps=3 format=3 uid="uid://srspni0arccj"]

[ext_resource type="Script" path="res://scripts/straight_wave.gd" id="1_xlavw"]

[sub_resource type="Curve2D" id="Curve2D_h833y"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
}
point_count = 2

[node name="StraightWave" type="Node2D"]
script = ExtResource("1_xlavw")

[node name="SpawnPoints" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="SpawnPoints"]

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource("Curve2D_h833y")

[node name="TimerBetweenEnemies" type="Timer" parent="."]

[connection signal="timeout" from="TimerBetweenEnemies" to="." method="_on_timer_between_enemies_timeout"]
